Fix layout issues in Error404 and HeroSection styles

--- a/src/components/Error404/error404.module.scss
+++ b/src/components/Error404/error404.module.scss
@@ -7,6 +7,7 @@
   min-width: 100%;
   min-height: 100%;
   padding: 96px 0;
+  position: relative
 }
 
 .placeholder {
