--- a/src/components/HeroSection/HeroSection.module.scss
+++ b/src/components/HeroSection/HeroSection.module.scss
@@ -114,7 +114,7 @@
     position: relative;
     top: 0;
     right: 0;
-    margin-bottom: 50px;
+    margin-bottom: -100px;
   }
 
   .image {
@@ -141,6 +141,7 @@
 
   .imageContainer {
     height: 320px;
+    margin-bottom: 50px;
   }
 
   .image {
